--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
             hyphens: 'auto';
             line-height: 110%;
         }
-        @media (prefers-color-scheme: darkc) {
+        @media (prefers-color-scheme: dark) {
             body {
                 background-color: black;
                 color: seagreen;
