index: Fix css hypens property
Signed-off-by: Mubashshir <ahmubashshir@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
         .fun {
             font-size: 10em;
             font-family: 'Bad Script', cursive, sans-serif;
-            hyphens: 'auto';
+            hyphens: auto;
             line-height: 110%;
         }
         @media (prefers-color-scheme: dark) {
